src/runtime/tests/golden/errors/18_duplicate_class/source.z42
class Widget {
    Widget() {}
}

class Widget {   // duplicate — should be a compile error
    Widget() {}
}

void Main() {}
